--- a/design/기능 정의서.md
+++ b/design/기능 정의서.md
@@ -1,9 +1,9 @@
-프로젝트 정의서의 사용자 스토리를 기반으로 세부 기능을 구체적으로 정의합니다.
+# 기능 정의서
 
 ## 구직자 등록 사용자 스토리
 
-### 기업 채용담당자로서, 나는 새로운 구직자를 채용하고 싶습니다. 
-구직자는 자신의 프로필과 포트폴리오를 최신 상태로 유지하고 싶습니다.
+**기업 채용담당자로서, 나는 새로운 구직자를 채용하고 싶습니다. 
+**구직자는 자신의 프로필과 포트폴리오를 최신 상태로 유지하고 싶습니다.
 
 ### 1. 기능명: 구직자 프로필 등록
 
