--- a/design/프로젝트 정의서.md
+++ b/design/프로젝트 정의서.md
@@ -24,7 +24,7 @@
 ### 아키텍처 개요
 
 - 프론트엔드: JavaScript, TypeScript (Next.js)
-- 백엔드: Bun.js (Express.js), Nginx, Aws EC2
+- 백엔드: Node.js (Express.js), Nginx, Aws EC2
 - 데이터베이스: MongoDB
 
 ### 모듈 구성
@@ -70,7 +70,7 @@
 ### 개발 환경
 
 - 프론트엔드: React.js, HTML, CSS, JavaScript, Next.js, TypeScript
-- 백엔드: Bun.js, Express.js, Prisma, Nginx, Aws EC2
+- 백엔드: Node.js, Express.js, Prisma, Nginx, Aws EC2
 - 데이터베이스: MongoDB
 - 도구: Visual Studio Code, Git
 
