--- a/design/기능 정의서.md
+++ b/design/기능 정의서.md
@@ -1,10 +1,19 @@
 # 기능 정의서
 
+**기업 채용담당자로서, 나는 새로운 구직자를 채용하고 싶습니다.**</br>
+**구직자는 자신의 프로필과 포트폴리오를 최신 상태로 유지하고 싶습니다.**
+
+**전체 흐롬도**
+![](https://i.imgur.com/YftmtWC.png)
+
+
 ## 구직자 등록 사용자 스토리
+**구직자 사용자 스토리 흐름도**
+![](https://i.imgur.com/DAL2LEK.png)
 
-**기업 채용담당자로서, 나는 새로운 구직자를 채용하고 싶습니다. 
-**구직자는 자신의 프로필과 포트폴리오를 최신 상태로 유지하고 싶습니다.
 
+### 기업 채용담당자로서, 나는 새로운 구직자를 채용하고 싶습니다. 
+구직자는 자신의 프로필과 포트폴리오를 최신 상태로 유지하고 싶습니다.
 
 ### 1. 기능명: 구직자 프로필 등록
 
