Update 기능정의서.md > 기능정의서에 유저플로우다이어그램 추가

--- a/design/기능 정의서.md
+++ b/design/기능 정의서.md
@@ -3,17 +3,65 @@
 **기업 채용담당자로서, 나는 새로운 구직자를 채용하고 싶습니다.**</br>
 **구직자는 자신의 프로필과 포트폴리오를 최신 상태로 유지하고 싶습니다.**
 
-**전체 흐롬도**
+- **전체 흐롬도**
 ![](https://i.imgur.com/YftmtWC.png)
 
 
-## 구직자 등록 사용자 스토리
-**구직자 사용자 스토리 흐름도**
-![](https://i.imgur.com/DAL2LEK.png)
+## 유저 플로우 다이어그램
 
+- **구직자 유저 플로우 다이어그램**
+```mermaid
+flowchart TD
 
-### 기업 채용담당자로서, 나는 새로운 구직자를 채용하고 싶습니다. 
-구직자는 자신의 프로필과 포트폴리오를 최신 상태로 유지하고 싶습니다.
+A[플랫폼 방문] --> B{회원가입 여부}
+B -->|새 회원| C[회원가입]
+C --> D[프로필 작성]
+D --> E[로그인]
+B -->|기존 회원| E
+E --> F[메인 페이지]
+F --> G[적성검사 신청]
+G --> H{적성 검사 요청}
+H -->|요청 성공| I[검사 안내]
+I --> J[검사 준비]
+J --> K[검사 실시]
+K --> L[검사 결과 확인]
+L --> M[직무 추천]
+M --> N[맞춤 채용정보]
+N --> O[지원 분야 선택]
+O --> P[채용공고 조회]
+P --> Q[지원하기]
+Q --> R{서류전형}
+R -->|합격| S[인적성검사]
+S --> T[면접전형]
+T -->|합격| U[최종 합격]
+T -->|불합격| P
+R -->|불합격| P
+H -->|요청 실패| G
+U --> V[입사]
+```
+
+- **기업 채용 담당자 유저 플로우 다이어그램**
+```mermaid
+flowchart TD
+
+A[로그인] --> B[채용공고 등록]
+B --> C[지원자 서류 검토]
+C --> D{서류전형}
+D -->|합격| E[인적성검사 안내]
+E --> F[인적성검사 결과 확인]
+F --> G{인적성검사 합격 여부}
+G -->|합격| H[면접 일정 조율]
+H --> I[면접 진행]
+I --> J{최종 합격 여부}
+J -->|합격| K[최종 합격 통보]
+J -->|불합격| C
+G -->|불합격| C
+D -->|불합격| C
+K --> L[채용 완료]
+
+```
+
+## 기능별 설명
 
 ### 1. 기능명: 구직자 프로필 등록
 
@@ -35,7 +83,7 @@
 
 ### 1.1 사용자 액션
 
-### 등록
+#### 등록
 
 - 등록 버튼 클릭
     - 입력 항목 유효성 검사 실행
