#12 기능정의서 내용 개선

--- a/design/기능 정의서.md
+++ b/design/기능 정의서.md
@@ -1,15 +1,20 @@
 # 기능 정의서
 
-**기업 채용담당자로서, 나는 새로운 구직자를 채용하고 싶습니다.**</br>
-**구직자는 자신의 프로필과 포트폴리오를 최신 상태로 유지하고 싶습니다.**
+- 각 기능들에 대한 세부 설명
+- 기업 채용 담당자와 구직자의 유저 플로우 다이어그램
+- 각 사용자가 구직 플랫폼을 사용 했을 때의 작업 흐름에 대한 설명
 
-- **전체 흐롬도**
+#### 각 구직 플랫폼을 사용할 때의 목적
+> **기업 채용담당자로서, 나는 새로운 구직자를 채용하고 싶습니다.**</br>
+> **구직자는 자신의 프로필과 포트폴리오를 최신 상태로 유지하고 싶습니다.**
+
+## **전체 유저 플로우 다이어그램**
 ![](https://i.imgur.com/YftmtWC.png)
 
 
-## 유저 플로우 다이어그램
+## 사용자별 유저 플로우 다이어그램
 
-- **구직자 유저 플로우 다이어그램**
+### **구직자의 유저 플로우 다이어그램**
 ```mermaid
 flowchart TD
 
@@ -40,7 +45,7 @@ H -->|요청 실패| G
 U --> V[입사]
 ```
 
-- **기업 채용 담당자 유저 플로우 다이어그램**
+### **기업 채용 담당자 유저 플로우 다이어그램**
 ```mermaid
 flowchart TD
 
@@ -62,28 +67,60 @@ K --> L[채용 완료]
 ```
 
 ## 기능별 설명
+1. 로그인 기능
+2. 프로필 조회 기능
+3. 구직자 매칭 및 기업 추천 기능
+4. 포트폴리오 업로드 및 조회 기능
+5. 구직자 매칭 및 기업 추천 기능
 
-### 1. 기능명: 구직자 프로필 등록
+### 1. 로그인 기능
+사용자가 로그인하게 되는 과정을 설명함. </br>
+로그인 정보와 일치하지 않을 경우 다시 사용자가 입력을 하게 됨.
 
-- 기능 설명
-    - 구직자는 자신의 기본 정보를 바탕으로 프로필을 등록할 수 있습니다. 구직자 자신의 프로필을 수정을 하여 최신 상태로 유지 할 수 있습니다.
-- 입력 항목
-    - 이메일, 비밀번호, 이름, 전화번호, ID, 주소, 주민등록번호
-    - 구직자 ID: 고유 식별자 (자동 생성)
-    - 이름: 문자열, 최대 10자
-    - 연락처: 문자열, 최대 15자 (유효성 검사 필요)
-    - 이메일: 문자열, 최대 50자 (유효성 검사 필요)
-    - 주소: 선택형 목록(프론트엔드에서 제공)
-    - 학력 및 전공: 선택형 목록(프론트엔드에서 제공)
-    - 수상경력: 문자열, 최대 50자
-    - 사진: 이미지 형식 선택(png, jpeg), 반명함 사이즈(3×4cm)
-    - 주민등록번호: 문자열, 13자(유효성 검사 필요)
-    - 경력: 문자열, 최대 300자
-    
+![스크린샷 2024-05-23 154658](https://github.com/nakyeonko3/devcamp-onboarding-04/assets/143858798/b3aff7ac-c20f-4f20-8eda-a2985fbb5d02)
 
-### 1.1 사용자 액션
+### 2. 프로필 조회 기능
 
-#### 등록
+직무 적성 온라인 채용 플랫폼 프로필 조회 기능의 컴포넌트 관계도는 프로필 공개 범위 설정과 검색 및 필터링 기능 등의 상호작용과 의존성을 보여주며, 사용자 프로필 조회, 공개 범위 설정, 검색 및 필터링 기능 등을 구현하는 데 사용됨.
+
+<img width="1483" alt="프로필 조회 기능(컴포넌트 관계도)" src="https://github.com/nakyeonko3/devcamp-onboarding-04/assets/146011623/91d1bd96-116d-429f-afc1-dd130a2ad0d4">
+
+
+
+### 2. 포트폴리오 업로드 및 조회 기능
+
+---
+```mermaid
+flowchart TD
+    A[Portfolio] --> B[updatePortfolio]
+    A --> C[searchPortfolio]
+    B --> D[updateImages]
+    B --> E[updateDocuments]
+    B --> F[updateVideos]
+    B --> I[submitButton]
+    C --> G[isPublic]
+    C --> H[portfolioList]
+    J[Button] --> I
+```
+
+
+### 3. 구직자 매칭 및 기업 추천 기능
+구직자 매칭 및 기업 추천 기능은 기업 데이터, 구직자 데이터를 AI,알고리즘,머신러닝을 이용해 기업과 구직자간의 상성이 좋은 매칭을 시켜줌.
+[![](https://mermaid.ink/img/pako:eNpVkc1Kw0AQx19l2ZNC-gI5CK1powdPejMelmRri00iMUFkCSjES1HSQ4NFo1SoLUKFaFupr5TMvoP5ssTdy8x_fjPMB8OqqVEs4nbPvFQ7xLLRkaQYKH3143g1h9kNvAxQMpvAzwdKIh_F6wgebhF8D-ErzLyk_3aCarWdxlaFv4_gecm9aLuslQFol5XJm7CbyXLBNHJGYnzoJa8hDzy3qjcZ9-e8v-b-MpnOYTT5F20xmF3D04AHIYJPDx7f48UqXoxLSMohmdX3BQjuUj0rMR2V0SaqdNGqOnLu7LHNYMLfAPk-ynzFKH5hI4QFrFNLJ10t3SvLFAXbHapTBYupqRHrTMGK4aYccWzz8MpQsWhbDhWwc64Rm0pdcmoRHYtt0rtIVap1bdM6KA6V38v9BULquwM?type=png)](https://mermaid.live/edit#pako:eNpVkc1Kw0AQx19l2ZNC-gI5CK1powdPejMelmRri00iMUFkCSjES1HSQ4NFo1SoLUKFaFupr5TMvoP5ssTdy8x_fjPMB8OqqVEs4nbPvFQ7xLLRkaQYKH3143g1h9kNvAxQMpvAzwdKIh_F6wgebhF8D-ErzLyk_3aCarWdxlaFv4_gecm9aLuslQFol5XJm7CbyXLBNHJGYnzoJa8hDzy3qjcZ9-e8v-b-MpnOYTT5F20xmF3D04AHIYJPDx7f48UqXoxLSMohmdX3BQjuUj0rMR2V0SaqdNGqOnLu7LHNYMLfAPk-ynzFKH5hI4QFrFNLJ10t3SvLFAXbHapTBYupqRHrTMGK4aYccWzz8MpQsWhbDhWwc64Rm0pdcmoRHYtt0rtIVap1bdM6KA6V38v9BULquwM)
+
+
+### 4. 직무적성 테스트 기능
+구직자는 검사지 웹페이지를 통해 직무적성검사를 진행 할 수 있음.
+관리자(채용 담당자)는 검사지 관리 프로그램을 통해 검사지를 수정 삭제, 등록, 조회를 할 수 있음.
+
+![](https://i.imgur.com/hyA2E6g.png)
+
+
+## 사용자의 세부 액션
+- 등록
+- 등록 취소
+
+### 등록
 
 - 등록 버튼 클릭
     - 입력 항목 유효성 검사 실행
@@ -107,6 +144,7 @@ flowchart TD
 
 ```
 
+### 등록 취소
 - 취소 버튼 클릭
     - 홈 화면으로 전환
 
@@ -114,5 +152,4 @@ flowchart TD
 flowchart TD
     A[취소 버튼 클릭] --> B[홈 화면으로 이동]
     B --> Z[종료]
-
 ```
