--- a/design/기능 정의서.md
+++ b/design/기능 정의서.md
@@ -105,7 +105,8 @@ flowchart TD
 
 
 ### 3. 구직자 매칭 및 기업 추천 기능
-구직자 매칭 및 기업 추천 기능은 기업 데이터, 구직자 데이터를 AI,알고리즘,머신러닝을 이용해 기업과 구직자간의 상성이 좋은 매칭을 시켜줌.
+구직자 매칭 및 기업 추천 기능은 기업 데이터, 구직자 데이터를 AI,알고리즘,머신러닝을 이용해 기업과 구직자간의 상성이 좋은 매칭을 시켜줌.</br>
+
 [![](https://mermaid.ink/img/pako:eNpVkc1Kw0AQx19l2ZNC-gI5CK1powdPejMelmRri00iMUFkCSjES1HSQ4NFo1SoLUKFaFupr5TMvoP5ssTdy8x_fjPMB8OqqVEs4nbPvFQ7xLLRkaQYKH3143g1h9kNvAxQMpvAzwdKIh_F6wgebhF8D-ErzLyk_3aCarWdxlaFv4_gecm9aLuslQFol5XJm7CbyXLBNHJGYnzoJa8hDzy3qjcZ9-e8v-b-MpnOYTT5F20xmF3D04AHIYJPDx7f48UqXoxLSMohmdX3BQjuUj0rMR2V0SaqdNGqOnLu7LHNYMLfAPk-ynzFKH5hI4QFrFNLJ10t3SvLFAXbHapTBYupqRHrTMGK4aYccWzz8MpQsWhbDhWwc64Rm0pdcmoRHYtt0rtIVap1bdM6KA6V38v9BULquwM?type=png)](https://mermaid.live/edit#pako:eNpVkc1Kw0AQx19l2ZNC-gI5CK1powdPejMelmRri00iMUFkCSjES1HSQ4NFo1SoLUKFaFupr5TMvoP5ssTdy8x_fjPMB8OqqVEs4nbPvFQ7xLLRkaQYKH3143g1h9kNvAxQMpvAzwdKIh_F6wgebhF8D-ErzLyk_3aCarWdxlaFv4_gecm9aLuslQFol5XJm7CbyXLBNHJGYnzoJa8hDzy3qjcZ9-e8v-b-MpnOYTT5F20xmF3D04AHIYJPDx7f48UqXoxLSMohmdX3BQjuUj0rMR2V0SaqdNGqOnLu7LHNYMLfAPk-ynzFKH5hI4QFrFNLJ10t3SvLFAXbHapTBYupqRHrTMGK4aYccWzz8MpQsWhbDhWwc64Rm0pdcmoRHYtt0rtIVap1bdM6KA6V38v9BULquwM)
 
 
