#11 요구사항 정의서 내용 개선

--- a/design/요구사항 정의서.md
+++ b/design/요구사항 정의서.md
@@ -23,11 +23,16 @@
 - 로그인: 기존 사용자는 이메일과 비밀번호로 로그인할 수 있습니다.
 - 사용자 등록: 새로운 사용자는 회원가입 페이지에서 이메일, 비밀번호, 이름, 전화번호, 주소 등 기본 정보를 입력하여 가입할 수 있습니다.
 
+![발표 장표_페이지_2](https://github.com/nakyeonko3/devcamp-onboarding-04/assets/146011623/4202b0df-7257-49df-953b-a2ef4e6a89b3)
+
 ### 프로필 조회 기능
 
 - 프로필 조회: 다른 사용자(구직자, 기업)의 프로필을 조회 할 수 있습니다.  프로필에는 이메일, 이름, 전화 번호 등 기본 정보가 들어갑니다.
 - 프로필 공개 범위 설정: 프로필 기본 정보 중에 일부만 공개하도록 범위를 설정할 수 있습니다.
 - 검색 및 필터링 기능:  프로필 검색 및 필터링 기능을 제공합니다.
+
+![발표 장표_페이지_3](https://github.com/nakyeonko3/devcamp-onboarding-04/assets/146011623/7eea5d5b-9913-442e-925c-110cb652d0e0)
+
 
 ### 포트폴리오 업로드 및 조회 기능
 
@@ -35,17 +40,26 @@
 - 포트폴리오 비공개: 구직자는 포트폴리오를 타인에게 비공개 상태로 등록 할 수 있습니다.
 - 조회 기능: 기업과 구직자 모두 다른 사용자의 포트폴리오를 조회할 수 있습니다. .
 
+
+![발표 장표_페이지_5](https://github.com/nakyeonko3/devcamp-onboarding-04/assets/146011623/1f70761a-c28f-4386-b810-5f8e1a169509)
+
 ### 직무 적성 테스트 프로그램
 
 - 테스트는 관심사, 성격 유형, 기술 수준 등을 측정합니다.
 - 다양한 직무 적성 테스트 제공: 다양한 분야의 직무 적성 테스트를 제공합니다(예: 프로그래밍, 디자인, 마케팅 등).
 - 직무 추천 기능: 테스트 결과를 분석하여 구직자에게 적합한 직무를 추천해줍니다.
 
+![발표 장표_페이지_4](https://github.com/nakyeonko3/devcamp-onboarding-04/assets/146011623/25b5585c-7671-47de-9549-c5fe20649c2a)
+
 ### 구직자 매칭 및 기업 추천 기능
 
 - 구직자와 기업이 등록한 데이터(프로필, 포트폴리오, 채용 공고 등)를 분석합니다.
 - 매칭 알고리즘은 머신러닝 기술을 활용하여 지속적으로 개선됩니다.
 - 구직자 추천 기능과 기업 추천 기능을 제공합니다.
+
+
+![발표 장표_페이지_6](https://github.com/nakyeonko3/devcamp-onboarding-04/assets/146011623/dcbceabf-f388-44ad-9524-12fedf64db48)
+
 
 ### 통합 기능
 
